# aoc-2022

./: Cargo.toml
day-1/src/: main.rs
day-2/src/: main.rs
day-3/src/: main.rs
day-4/src/: main.rs
day-5/src/: main.rs
day-6/src/: main.rs
day-7/src/: main.rs
day-8/src/: main.rs
